# fel-corpus-viz

./: .browserslistrc  .editorconfig  .eslintrc.js  .gitattributes  .gitignore  NODEJS-SETUP.md  README.md  ava.config.js  babel.config.js  netlify.toml  package.json  postcss.config.js  tsconfig.json  webpack.config.base.js  webpack.config.development.js  webpack.config.production.js
.github/workflows/: ci.yml
app/: README.md  _headers  _redirects  another.ejs  another.ts  index.ejs  index.tsx  manifest.json
app/compoments/: App.tsx
app/components/: App.tsx  CorpusViz.tsx  DatasetOverview.tsx  DatasetSelector.tsx  Demo.tsx  DocumentOverview.tsx  ScatterplotWrapper.tsx  WordCloudView.tsx  WordCloudWrapper.tsx  common.tsx  scatterplot.tsx  wordcloud.tsx
app/core/: README.md  corpora.ts  load-dataset.ts  popover.ts  scatterplot.ts  types.ts  wordcloud.ts
app/data/: datasets.ts  doc_embeddings.kos.txt  embeddings.bow.pca.enron.txt  embeddings.bow.pca.kos.txt  embeddings.bow.tsne.enron.txt  embeddings.bow.tsne.kos.txt  embeddings.pca.bow.enron.txt  embeddings.pca.bow.kos.txt  embeddings.pca.tfidf.enron.txt  embeddings.pca.tfidf.kos.txt  embeddings.tfidf.pca.enron.txt  embeddings.tfidf.pca.kos.txt  embeddings.tfidf.tsne.enron.txt  embeddings.tfidf.tsne.kos.txt
app/demo/: bubbles.ts  corpora.ts  demo.ts  load-data.ts  load-dataset.ts  popover.ts  types.ts  wordcloud.ts  (+1 more)
data-preprocessing/: README.md  embeddings.py  main.py  pca.py  pyproject.toml
test/: _register.js  hard.ts  simple.ts
tools/: web-app-manifest-loader.js  webpack-utils.js
types/: svg.d.ts
(+20 files in other folders)
