[tool.poetry]
name = "fel-corpus-viz"
version = "0.1.0"
description = ""
authors = ["Boris Rakovan <b.rakovan@gmail.com>"]
readme = "README.md"
packages = [{include = "fel_corpus_viz"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.2"
scikit-learn = "^1.2.2"
matplotlib = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

